nodejsをインストール

--- a/docker/photo-sharing/Dockerfile
+++ b/docker/photo-sharing/Dockerfile
@@ -5,7 +5,7 @@ COPY ./php/php.ini /usr/local/etx/php/php.ini
 
 RUN set -x \
     && apt-get -y update \
-    && apt-get install -y zip unzip git \
+    && apt-get install -y zip unzip git wget libpq-dev \
     && docker-php-ext-install pdo_mysql \
     && pecl install redis-5.1.1 \
     && docker-php-ext-enable redis
@@ -14,6 +14,11 @@ RUN set -x \
     && php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
     && php composer-setup.php --install-dir=/usr/local/bin --filename=composer \
     && php -r "unlink('composer-setup.php');"
+
+# Node.jsをインストール
+RUN apt-get update \
+    &&  curl -sL https://deb.nodesource.com/setup_12.x | bash - \
+    && apt-get install -y nodejs
 
 RUN set -x \
     && a2enmod rewrite
