--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,4 +20,6 @@ services:
       - "32800:3306"
     environment:
       MYSQL_ALLOW_EMPTY_PASSWORD: 1
+      MYSQL_DATABASE: photo_sharing
+      MYSQL_USER: root
       TZ: Asia/Tokyo
