GDライブラリを利用するために、各種必要なモジュールをインストール

--- a/docker/photo-sharing/Dockerfile
+++ b/docker/photo-sharing/Dockerfile
@@ -5,10 +5,12 @@ COPY ./php/php.ini /usr/local/etx/php/php.ini
 
 RUN set -x \
     && apt-get -y update \
-    && apt-get install -y zip unzip git wget libpq-dev \
+    && apt-get install -y zip unzip git wget libpq-dev libfreetype6-dev libjpeg62-turbo-dev libpng-dev \
     && docker-php-ext-install pdo_mysql \
     && pecl install redis-5.1.1 \
-    && docker-php-ext-enable redis
+    && docker-php-ext-enable redis \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
+    && docker-php-ext-install -j$(nproc) gd
 
 RUN set -x \
     && php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
